docs: update addressPlaceholder

--- a/miot_kit/miot/res/redirect_page.html
+++ b/miot_kit/miot/res/redirect_page.html
@@ -376,7 +376,7 @@
                 copyFailed: '复制失败，请手动复制',
                 encodingFailed: '参数处理失败',
                 settingsTitle: '设置IP地址',
-                addressPlaceholder: '请输入当前页面地址栏的地址，例如: https://192.168.31.100:8000',
+                addressPlaceholder: '请输入xiaomi miloco网页地址，例如: https://192.168.31.100:8000',
                 settingsSaved: '设置已保存',
                 settingsCancel: '取消',
                 settingsSave: '保存',
@@ -408,7 +408,7 @@
                 copyFailed: '複製失敗，請手動複製',
                 encodingFailed: '參數處理失敗',
                 settingsTitle: '設置IP地址',
-                addressPlaceholder: '請輸入當前頁面地址欄的地址，例如: https://192.168.31.100:8000',
+                addressPlaceholder: '請輸入xiaomi miloco網頁地址，例如: https://192.168.31.100:8000',
                 settingsSaved: '設置已保存',
                 settingsCancel: '取消',
                 settingsSave: '保存',
@@ -440,7 +440,7 @@
                 copyFailed: 'Copy failed, please copy manually',
                 encodingFailed: 'Parameter processing failed',
                 settingsTitle: 'Set IP Address',
-                addressPlaceholder: 'Please enter the address in the current page\'s address bar, e.g.: https://192.168.31.100:8000',
+                addressPlaceholder: 'Please enter the Xiaomi Miloco webpage address, e.g.: https://192.168.31.100:8000',
                 settingsSaved: 'Settings saved',
                 settingsCancel: 'Cancel',
                 settingsSave: 'Save',
@@ -472,7 +472,7 @@
                 copyFailed: 'コピーに失敗しました。手動でコピーしてください',
                 encodingFailed: 'パラメータ処理に失敗しました',
                 settingsTitle: 'IPアドレス設定',
-                addressPlaceholder: '現在のページのアドレスバーの住所を入力してください、例: https://192.168.31.100:8000',
+                addressPlaceholder: 'Xiaomi Milocoのウェブページアドレスを入力してください、例: https://192.168.31.100:8000',
                 settingsSaved: '設定が保存されました',
                 settingsCancel: 'キャンセル',
                 settingsSave: '保存',
@@ -504,7 +504,7 @@
                 copyFailed: '복사에 실패했습니다. 수동으로 복사하세요',
                 encodingFailed: '매개변수 처리에 실패했습니다',
                 settingsTitle: 'IP 주소 설정',
-                addressPlaceholder: '현재 페이지 주소 표시줄의 주소를 입력하세요, 예: https://192.168.31.100:8000',
+                addressPlaceholder: 'Xiaomi Miloco 웹페이지 주소를 입력하세요, 예: https://192.168.31.100:8000',
                 settingsSaved: '설정이 저장되었습니다',
                 settingsCancel: '취소',
                 settingsSave: '저장',
