docs: update redirect page notify text

--- a/miot_kit/miot/res/redirect_page.html
+++ b/miot_kit/miot/res/redirect_page.html
@@ -342,7 +342,7 @@
         <div class="button-container">
             <div class="address-display-container">
                 <input type="text" class="address-display" id="addressDisplay"
-                    placeholder="请输入当前页面地址栏的地址，例如: https://192.168.31.100:8000">
+                    placeholder="请输入xiaomi miloco网页地址，例如: https://192.168.31.100:8000">
             </div>
         </div>
         <!-- TIP -->
