fix: fix settingsInvalidIP content

--- a/miot_kit/miot/res/redirect_page.html
+++ b/miot_kit/miot/res/redirect_page.html
@@ -381,7 +381,7 @@
                 settingsCancel: '取消',
                 settingsSave: '保存',
                 settingsRequired: '请先设置IP地址',
-                settingsInvalidIP: '请输入完整地址（如：https://https://192.168.31.100:8000）',
+                settingsInvalidIP: '请输入完整地址（如：https://192.168.31.100:8000）',
                 noParamsToSend: '没有参数可发送',
                 requestFailed: '请求失败',
                 closeHintTitle: '请手动关闭页面',
